--- a/app/assets/stylesheets/exchanges.scss
+++ b/app/assets/stylesheets/exchanges.scss
@@ -1,103 +1,12 @@
 body {
-  background: image-url("background-img.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
- 
-.main{
-  margin-top: 50px;
-}
- 
- 
-.title-box{
-  margin-top: 20%;
- 
-  .title{
-    color: white;
-    text-shadow: 2px 0px 2px #000000;
-  }
- 
-  .subtitle{
-    color: white;
-    text-shadow: 3px 0px 3px #000000;
-    font-size: 30px;
-    margin-left: 10px;
-    margin-right: 10px;
-  }
-}
- 
- 
-.exchange_box{
-  margin: 10px auto;
-  .logo-box{
-    margin: 0 auto;
-    padding-bottom: 10px;
-  }
+  background-color: #9300ee;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='129' height='129' viewBox='0 0 200 200'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='100' y1='33' x2='100' y2='-3'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='100' y1='135' x2='100' y2='97'%3E%3Cstop offset='0' stop-color='%23000' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23000' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Cg fill='%237d00ca' fill-opacity='0.6'%3E%3Crect x='100' width='100' height='100'/%3E%3Crect y='100' width='100' height='100'/%3E%3C/g%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23a)' points='100 30 0 0 200 0'/%3E%3Cpolygon fill='url(%23b)' points='100 100 0 130 0 100 200 100 200 130'/%3E%3C/g%3E%3C/svg%3E");
 }
 
-
-// exchange_box
-
-.exchange_box{
- 
-  .card{
-    border: 0;
- 
-    .card-header{
-      background-color: #878d99;
-      border-radius: 0;
-      color: white;
-      font-weight: 700;
-    }
- 
-    .card-block{
-      padding-top: 10px;
-      padding: 20px;
- 
-      .title{
-        color: #878d99;
-        font-weight: 700;
-      }
- 
-      .btn-exchange{
-        background-color: #5bc0de;
-        border-color: #5bc0de;
-        border-radius: 0;
-      }
-    }
-  }
+.banner {
+  height: calc(100vh - 56px);
 }
- 
-@media only screen and (max-width : 992px) {
-  .card-header {
-    font-size: 25px;
-  }
- 
-  .title{
-    margin-top: 30px;
-    font-size: 20px;
-  }
-    
-  .form-group {
-    select {
-      font-size: 20px;
-      height: 50px !important;
-    }
- 
-    input {
-      font-size: 20px;
-      height: 50px;
-    }
-  }
- 
- 
-  #result {
-    margin-bottom: 20px;
-  }
- 
-  .btn-exchange {
-    font-size: 20px;
-  }
+
+.top-border {
+  border-radius: 15px 15px 0 0;
 }
