--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -1,34 +1,24 @@
-<div class='exchange_box col-sm-12'>
-  <div class='card'>
- 
-    <div class='card-header text-center'>
-      Simule sua conversão
+<%= form_tag('/convert', method: :get, id: 'exchange_form') do %>
+  <div class="bg-danger p-2 top-border">
+      <div class="text-center p-3 text-light">Simular Conversão <i class="fas fa-dollar-sign"></i>
+      </div>
+  </div>
+  <div class="bg-light p-5">
+    <div class='form-group'>
+      <p class='title'>Moeda Local</p>
+      <%= select_tag 'source_currency', options_for_select(currency_list, 'BRL'), class: 'form-control', id: 'source_currency' %>
     </div>
- 
-    <div class='card-block'>
-      <%= form_tag('/convert', method: :get, id: 'exchange_form') do %>
-        <div class='local_currency'>
-          <div class='form-group'>
-            <p class='title'>Moeda Local</p>
-            <%= select_tag 'source_currency', options_for_select(currency_list, 'BRL'), class: 'form-control', id: 'source_currency' %>
-          </div>
- 
-          <div class='form-group'>
-            <input type='number' name='amount' id='amount' class='form-control' placeholder='Quantidade ($10)' step='any' required>
-            <div id="reverse" class="btn btn-outline-danger d-block mt-1">Inverter</div>
-          </div>
-        </div>
-                    
-        <div class='destination_currency'>
-          <div class='form-group'>
-            <p class='title'>Moeda Pretendida</p>
-            <%= select_tag 'target_currency', options_for_select(currency_list, 'EUR'), class: 'form-control', id: 'target_currency'%>
-          </div>
-          <div class='form-group'>
-            <input type='text' id='result' name='result' class='form-control border-success' placeholder='Resultado' readonly>
-          </div>
-        </div>
-      <% end %>
+    <div class='form-group'>
+      <input type='number' name='amount' id='amount' class='form-control' placeholder='$$$' step='any' required>
+      <div id="reverse" class="btn btn-outline-warning d-block mt-1">Inverter <i class="fas fa-sync-alt"></i></div>
+    </div>
+    <div class='form-group'>
+      <p class='title'>Moeda Pretendida</p>
+      <%= select_tag 'target_currency', options_for_select(currency_list, 'EUR'), class: 'form-control', id: 'target_currency'%>
+    </div>
+    <div class='form-group'>
+      <input type='text' id='result' name='result' class='form-control border-success' placeholder='Resultado' readonly>
     </div>
   </div>
-</div>
+
+<% end %>
