--- a/app/views/exchanges/_exchange_box.html.erb
+++ b/app/views/exchanges/_exchange_box.html.erb
@@ -14,7 +14,7 @@
     </div>
     <div class='form-group'>
       <p class='title'>Moeda Pretendida</p>
-      <%= select_tag 'target_currency', options_for_select(currency_list, 'EUR'), class: 'form-control', id: 'target_currency'%>
+      <%= select_tag 'target_currency', options_for_select(currency_list, 'USD'), class: 'form-control', id: 'target_currency'%>
     </div>
     <div class='form-group'>
       <input type='text' id='result' name='result' class='form-control border-success' placeholder='Resultado' readonly>
